Adding kayla's papers

--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,19 @@
+@article{Gesell2013,
+author = {Gesell, Sabina B and Barkin, Shari L and Valente, Thomas W},
+doi = {10.1186/1748-5908-8-116},
+file = {:home/george/Dropbox/usc/Gesell et al 2013 Social Network Diagnostics 2013 Implementation Science.pdf:pdf},
+issn = {1748-5908},
+journal = {Implementation Science},
+keywords = {Behavior change,Group interventions,Obesity,Social network analysis,behavior change,group interventions,obesity,social network analysis},
+mendeley-groups = {Cana},
+number = {1},
+pages = {116},
+publisher = {Implementation Science},
+title = {{Social network diagnostics: a tool for monitoring group interventions}},
+url = {http://www.implementationscience.com/content/8/1/116},
+volume = {8},
+year = {2013}
+}
 @article{Valente2015,
 abstract = {This study applies diffusion of innovations theory to understand network influences on country ratification of an international health treaty, the Framework Convention for Tobacco Control (FCTC). From 2003 to 2014 approximately 90{\%} of United Nations member countries ratified the FCTC. We hypothesized that communication between tobacco control advocates on GLOBALink, a 7000-member online communication forum in existence from 1992 to 2012, would be associated with the timing of treaty ratification. We further hypothesized dynamic network influences such that external influence decreased over time, internal influence increased over time, and the role of opinion leader countries varied over time. In addition we develop two concepts: Susceptibility and influence that uncover the micro-level dynamics of network influence. Statistical analyses lend support to the influence of co-subscriptions on GLOBALink providing a conduit for inter-country influences on treaty ratification and some support for the dynamic hypotheses. Analyses of susceptibility and infection indicated particularly influential countries. These results have implications for the study of policy diffusion as well as dynamic models of behavior change.},
 author = {Valente, Thomas W and Dyal, Stephanie R and Chu, Kar-Hai and Wipfli, Heather and Fujimoto, Kayo},
@@ -68,19 +84,221 @@ url = {http://dx.plos.org/10.1371/journal.pone.0131712},
 volume = {10},
 year = {2015}
 }
-@article{Gesell2013,
-author = {Gesell, Sabina B and Barkin, Shari L and Valente, Thomas W},
-doi = {10.1186/1748-5908-8-116},
-file = {:home/george/Dropbox/usc/Gesell et al 2013 Social Network Diagnostics 2013 Implementation Science.pdf:pdf},
-issn = {1748-5908},
-journal = {Implementation Science},
-keywords = {Behavior change,Group interventions,Obesity,Social network analysis,behavior change,group interventions,obesity,social network analysis},
+@article{DelaHaye2013,
+author = {de la Haye, Kayla},
+doi = {10.1093/aje/kwt183},
+issn = {1476-6256},
+journal = {American journal of epidemiology},
+keywords = {Computer Simulation,Female,Humans,Male,Models, Psychological,Obesity,Obesity: prevention {\&} control,Social Support,Weight Reduction Programs,Weight Reduction Programs: methods},
 mendeley-groups = {Cana},
-number = {1},
-pages = {116},
-publisher = {Implementation Science},
-title = {{Social network diagnostics: a tool for monitoring group interventions}},
-url = {http://www.implementationscience.com/content/8/1/116},
-volume = {8},
+month = {sep},
+number = {5},
+pages = {837--8},
+pmid = {23904346},
+title = {{Re: "Are network-based interventions a useful antiobesity strategy?".}},
+url = {http://aje.oxfordjournals.org/content/early/2013/07/30/aje.kwt183.short},
+volume = {178},
 year = {2013}
+}
+@article{DelaHaye2014,
+abstract = {Family-based physical activity (PA) interventions would benefit from research that identifies how to build support for PA among family members. This study examined the extent to which relationships of encouragement to do PA, and co-engagement in PA, exist among Mexican-American parents and children, and sought to identify individual, relational, and household factors associated with these dimensions of support. Participants were 224 Mexican-origin adults, with at least one child aged 5-20 years, participating in a larger study conducted between 2008 and 2010. In baseline surveys, adult participants enumerated the names and attributes of their family and kin; this study focuses on 455 parent-child dyads, nested in 118 households. Parental encouragement of PA in their children was found in about half of dyads, and in 20 {\%} of dyads children encouraged parents. Encouragement relationships were highly reciprocal. Reciprocal parent-child encouragement was also positively associated with co-participation in PA; the latter found in just 17 {\%} of dyads. Results indicated that relational, individual, and socio-cultural attributes were associated with PA support among parents and children, and provide insights into how these relationships might be fostered within Mexican-American families.},
+author = {de la Haye, Kayla and de Heer, Hendrik Dirk and Wilkinson, Anna V and Koehly, Laura M},
+doi = {10.1007/s10865-012-9471-8},
+issn = {1573-3521},
+journal = {Journal of behavioral medicine},
+keywords = {Adolescent,Adult,Child,Child, Preschool,Family Characteristics,Female,Humans,Male,Mexican Americans,Mexican Americans: psychology,Motor Activity,Parent-Child Relations,Young Adult},
+mendeley-groups = {Cana},
+month = {apr},
+number = {2},
+pages = {234--44},
+pmid = {23203139},
+title = {{Predictors of parent-child relationships that support physical activity in Mexican-American families.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/23203139},
+volume = {37},
+year = {2014}
+}
+@article{DelaHaye2013a,
+abstract = {Friends are thought to influence adolescent drug use. However, few studies have examined the role of drugs in friendship selection, which is necessary to draw sound conclusions about influence. This study applied statistical models for social networks to test the contribution of selection and influence to associations in marijuana use among friends in two large high schools (N = 1,612; M age = 16.4). There was evidence for friend selection based on similar lifetime and current marijuana use at both schools, but friends were found to influence the initiation and frequency of adolescent marijuana use in just one of these schools. There was minimal evidence that peer effects were moderated by personal, school, or family risk factors.},
+author = {de la Haye, Kayla and Green, Harold D and Kennedy, David P and Pollard, Michael S and Tucker, Joan S},
+doi = {10.1111/jora.12018},
+file = {:home/george/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/de la Haye et al. - 2013 - Selection and Influence Mechanisms Associated With Marijuana Initiation and Use in Adolescent Friendship Netw.pdf:pdf},
+issn = {1050-8392},
+journal = {Journal of research on adolescence : the official journal of the Society for Research on Adolescence},
+mendeley-groups = {Cana},
+month = {sep},
+number = {3},
+pmid = {24187477},
+title = {{Selection and Influence Mechanisms Associated With Marijuana Initiation and Use in Adolescent Friendship Networks.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3811150{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {23},
+year = {2013}
+}
+@article{DelaHaye2012,
+abstract = {Homeless youth lack the traditional support networks of their housed peers, which increases their risk for poor health outcomes. Using a multilevel dyadic analytic approach, this study identified characteristics of social contacts, relationships, and social networks associated with the provision of tangible and emotional support to homeless youth (N = 419, M age = 20.09, SD = 2.80). Support providers were likely to be family members, sex-partners, or non-street based contacts. The provision of support was also associated with contacts' employment and homelessness status, frequency of contact, shared risk behaviors, and the number of network members that were homeless and employed. The results provide insights into how homeless youth could be assisted to develop more supportive social networks.},
+author = {de la Haye, Kayla and Green, Harold D and Kennedy, David P and Zhou, Annie and Golinelli, Daniela and Wenzel, Suzanne L and Tucker, Joan S},
+doi = {10.1111/j.1532-7795.2012.00806.x},
+file = {:home/george/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/de la Haye et al. - 2012 - Who is Supporting Homeless Youth Predictors of Support in Personal Networks.pdf:pdf},
+issn = {1050-8392},
+journal = {Journal of research on adolescence : the official journal of the Society for Research on Adolescence},
+mendeley-groups = {Cana},
+month = {dec},
+number = {4},
+pages = {604--616},
+pmid = {23204810},
+title = {{Who is Supporting Homeless Youth? Predictors of Support in Personal Networks.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3507516{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {22},
+year = {2012}
+}
+@article{DelaHaye2015,
+abstract = {Adolescents often befriend peers who are similar to themselves on a range of demographic, behavioral, and social characteristics, including substance use. Similarities in lifetime history of marijuana use have even been found to predict adolescent friendships, and we examine whether this finding is explained by youth's selection of friends who are similar on a range of more proximate, observable characteristics that are risk factors for marijuana use. Using two waves of individual and social network data from two high schools that participated in Add Health (N = 1,612; 52.7{\%} male), we apply longitudinal models for social networks to test whether or not several observable risky attributes (psychological, behavioral, and social) predict adolescent friendship choices, and if these preferences explain friend's similarities on lifetime marijuana use. Findings show that similarities on several risk factors predict friendship choices, however controlling for this, the preference to befriend peers with a similar history of marijuana use largely persists. The results highlight the range of social selection processes that lead to similarities in marijuana use among friends and larger peer groups, and that also give rise to friendship groups whose members share similar risk factors for substance use. Friends with high "collective risk" are likely to be important targets for preventing the onset and social diffusion of substance use in adolescents.},
+author = {de la Haye, Kayla and Green, Harold D and Pollard, Michael S and Kennedy, David P and Tucker, Joan S},
+doi = {10.1007/s10964-014-0210-z},
+issn = {1573-6601},
+journal = {Journal of youth and adolescence},
+mendeley-groups = {Cana},
+month = {oct},
+number = {10},
+pages = {1914--28},
+pmid = {25365913},
+title = {{Befriending Risky Peers: Factors Driving Adolescents' Selection of Friends with Similar Marijuana Use.}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/25365913},
+volume = {44},
+year = {2015}
+}
+@article{DelaHaye2010,
+abstract = {This study examines obesity-related behaviors within adolescent friendship networks, because adolescent peers have been identified as being important determinants of many health behaviors. We applied ERGM selection models for single network observations to determine if close adolescent friends engage in similar behaviors and to explore associations between behavior and popularity. Same-sex friends were found to be similar on measures of organized physical activity in two out of three school-based friendship networks. Female friends were found to engage in similar screen-based behaviors, and male friends tended to be similar in their consumption of high-calorie foods. Popularity (receiving ties) was also associated with some behaviors, although these effects were gender specific and differed across networks.},
+author = {de la Haye, Kayla and Robins, Garry and Mohr, Philip and Wilson, Carlene},
+doi = {10.1016/j.socnet.2009.09.001},
+issn = {03788733},
+journal = {Social Networks},
+keywords = {Adolescents,Exponential random graph models,Health behavior,Obesity,Social networks},
+mendeley-groups = {Cana},
+month = {jul},
+number = {3},
+pages = {161--167},
+title = {{Obesity-related behaviors in adolescent friendship networks}},
+url = {http://www.sciencedirect.com/science/article/pii/S0378873309000495},
+volume = {32},
+year = {2010}
+}
+@article{DelaHaye2011,
+abstract = {The current study explored the role of school-based friendship networks in adolescents' engagement in physical activity (PA). It was hypothesized that similar participation in PA would be a basis for friendship formation, and that friends would also influence behavior. Whether these processes were mediated through cognitive mechanisms was also explored. Self-reported participation in PA, cognitions about PA, and friendship ties to grade-mates were measured in two cohorts of Australian grade eight students (N = 378; M age = 13.7) three times over the 2008 school year. Interdependence between the friendship networks and PA was tested using stochastic actor-based models for social networks and behavior. The results showed that participants tended to befriend peers who did similar amounts of PA, and subsequently emulated their friends' behaviors. Friends' influence on PA was not found to be mediated through adolescents' cognitions about PA. These findings show that there is a mutually dependent relationship between adolescent friendship networks and PA; they highlight how novel network-based strategies may be effective in supporting young people to be physically active.},
+author = {de la Haye, Kayla and Robins, Garry and Mohr, Philip and Wilson, Carlene},
+doi = {10.1016/j.socscimed.2011.06.023},
+issn = {1873-5347},
+journal = {Social science {\&} medicine (1982)},
+keywords = {Adolescent,Adolescent Behavior,Australia,Exercise,Female,Friends,Humans,Male,Questionnaires,Social Support,South Australia},
+mendeley-groups = {Cana},
+month = {sep},
+number = {5},
+pages = {719--28},
+pmid = {21802807},
+title = {{How physical activity shapes, and is shaped by, adolescent friendships.}},
+url = {http://www.sciencedirect.com/science/article/pii/S0277953611003790},
+volume = {73},
+year = {2011}
+}
+@article{DelaHaye2011a,
+abstract = {PURPOSE: To determine whether weight-based similarities among adolescent friends result from social influence processes, after controlling for the role of weight on friendship selection and other confounding influences.
+
+METHODS: Four waves of data were collected from a grade 8 cohort of adolescents (N = 156, mean age = 13.6 years) over their initial 2 years of high school. At each wave, participants reported on their friendship relations with grade-mates and had their height and weight measured by researchers to calculate their body mass index (BMI). Newly developed stochastic actor-oriented models for social networks were used to simultaneously assess the role of weight on adolescents' friendship choices, and the effect of friends' BMIs on changes in adolescent BMI.
+
+RESULTS: Adolescents' BMIs were not significantly predicted by the BMI of their friends over the 16 months of this study. Similarities in the weights of friends were found to be driven predominantly by friendship selection, whereby adolescents, particularly those who were not overweight, preferred to initiate friendships with peers whose weight status (overweight/nonoverweight) was the same as their own.
+
+CONCLUSIONS: Weight-based similarities among friends were largely explained by the marginalization of overweight adolescents by their peers, rather than by the "contagion" of excess weight among friends. These findings highlight the importance of adequately modeling friendship selection processes when estimating social influence effects on adiposity.},
+author = {de la Haye, Kayla and Robins, Garry and Mohr, Philip and Wilson, Carlene},
+doi = {10.1016/j.jadohealth.2011.02.008},
+issn = {1879-1972},
+journal = {The Journal of adolescent health : official publication of the Society for Adolescent Medicine},
+keywords = {Adolescent,Adolescent Behavior,Adolescent Behavior: psychology,Australia,Body Mass Index,Body Weight,Child,Cohort Studies,Female,Friends,Friends: psychology,Humans,Linear Models,Male,Overweight,Overweight: psychology,Peer Group,Psychology, Adolescent,Schools,Social Behavior,Social Support,Surveys and Questionnaires},
+mendeley-groups = {Cana},
+month = {oct},
+number = {4},
+pages = {421--7},
+pmid = {21939874},
+title = {{Homophily and contagion as explanations for weight similarities among adolescent friends.}},
+url = {http://www.sciencedirect.com/science/article/pii/S1054139X11000577},
+volume = {49},
+year = {2011}
+}
+@article{DelaHaye2013b,
+author = {de la Haye, Kayla and Robins, Garry and Mohr, Philip and Wilson, Carlene},
+doi = {10.1111/jora.12045},
+issn = {10508392},
+journal = {Journal of Research on Adolescence},
+mendeley-groups = {Cana},
+month = {sep},
+number = {3},
+pages = {524--536},
+title = {{Adolescents’ Intake of Junk Food: Processes and Mechanisms Driving Consumption Similarities Among Friends}},
+url = {http://doi.wiley.com/10.1111/jora.12045},
+volume = {23},
+year = {2013}
+}
+@article{Green2013,
+abstract = {INTRODUCTION: Adolescent smoking studies find evidence of active peer influence and selection processes. However, studies have shown that these processes operate differently depending on context. This study uses SIENA to model coevolutionary processes between smoking and changes in friendship ties, comparing two high schools in which data were collected in identical fashion to explore influence and selection mechanisms with respect to current smoking, and smoking levels.
+
+METHODS: This is a longitudinal survey with 2 waves of data. In-home surveys were conducted with students from 2 large high schools in the United States: a West Coast school, and a Midwestern school. Participants were consented students in 10th and 11th grades at the first wave of data collection. The primary measures were self-reported smoking behavior and friendship nominations.
+
+RESULTS: There is evidence of influence and selection in both schools for adolescents' smoking status (1 = any smoking) and for level of smoking.
+
+CONCLUSIONS: These models reflect great similarities in influence and selection processes across schools for different smoking behaviors. However, smoking prevalence may impact the exact mechanisms by which influence and selection operate. Researchers should consider smoking interventions with independent modules addressing different selection and influence processes, implemented based on contextual factors such as the prevalence of smoking.},
+author = {Green, Harold D and Horta, Mariana and de la Haye, Kayla and Tucker, Joan S and Kennedy, David R and Pollard, Michael},
+doi = {10.1093/ntr/nts191},
+file = {:home/george/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Green et al. - 2013 - Peer influence and selection processes in adolescent smoking behavior a comparative study.pdf:pdf},
+issn = {1469-994X},
+journal = {Nicotine {\&} tobacco research : official journal of the Society for Research on Nicotine and Tobacco},
+keywords = {Adolescent,Female,Humans,Longitudinal Studies,Male,Peer Group,Smoking,Smoking: psychology,Stochastic Processes},
+mendeley-groups = {Cana},
+month = {feb},
+number = {2},
+pages = {534--41},
+pmid = {22944605},
+title = {{Peer influence and selection processes in adolescent smoking behavior: a comparative study.}},
+url = {http://ntr.oxfordjournals.org/content/15/2/534.short},
+volume = {15},
+year = {2013}
+}
+@article{Salvy2012,
+abstract = {Obesity during childhood and adolescence is a growing problem in the United States, Canada, and around the world that leads to significant physical, psychological, and social consequences. Peer experiences have been theoretically and empirically related to the "Big Two" contributors to the obesity epidemic, unhealthy eating and physical inactivity. In this article, we synthesize the empirical literature on the influence of peers and friends on youth's eating and physical activity. Limitations and issues in the theoretical and empirical literatures are also discussed, along with future research directions. In conclusion, we argue that the involvement of children's and adolescents' peer networks in prevention and intervention efforts may be critical for promoting and maintaining positive behavioral health trajectories. However, further theoretical and empirical work is needed to better understand the specific mechanisms underlying the effects of peers on youth's eating and physical activity.},
+author = {Salvy, Sarah-Jeanne and de la Haye, Kayla and Bowker, Julie C and Hermans, Roel C J},
+doi = {10.1016/j.physbeh.2012.03.022},
+file = {:home/george/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Salvy et al. - 2012 - Influence of peers and friends on children's and adolescents' eating and activity behaviors.pdf:pdf},
+issn = {1873-507X},
+journal = {Physiology {\&} behavior},
+keywords = {Adolescent,Adolescent Behavior,Child,Child Behavior,Eating,Eating: psychology,Feeding Behavior,Feeding Behavior: psychology,Female,Friends,Humans,Male,Motor Activity,Peer Group},
+mendeley-groups = {Cana},
+month = {jun},
+number = {3},
+pages = {369--78},
+pmid = {22480733},
+title = {{Influence of peers and friends on children's and adolescents' eating and activity behaviors.}},
+url = {http://www.sciencedirect.com/science/article/pii/S0031938412001278},
+volume = {106},
+year = {2012}
+}
+@article{Tucker2014,
+abstract = {PURPOSE: Although several social network studies have demonstrated peer influence effects on adolescent substance use, findings for marijuana use have been equivocal. This study examines whether structural features of friendships moderate friends' influence on adolescent marijuana use over time.
+
+METHODS: Using 1-year longitudinal data from the National Longitudinal Study of Adolescent Health, this article examines whether three structural features of friendships moderate friends' influence on adolescent marijuana use: whether the friendship is reciprocated, the popularity of the nominated friend, and the popularity/status difference between the nominated friend and the adolescent. The sample consists of students in grade 10/11 at wave I, who were in grade 11/12 at wave II, from two large schools with complete grade-based friendship network data (N = 1,612).
+
+RESULTS: In one school, friends' influence on marijuana use was more likely to occur within mutual, reciprocated friendships compared with nonreciprocated relationships. In the other school, friends' influence was stronger when the friends were relatively popular within the school setting or much more popular than the adolescents themselves.
+
+CONCLUSIONS: Friends' influence on youth marijuana use may play out in different ways, depending on the school context. In one school, influence occurred predominantly within reciprocated relationships that are likely characterized by closeness and trust, whereas in the other school adopting friends' drug use behaviors appeared to be a strategy to attain social status. Further research is needed to better understand the conditions under which structural features of friendships moderate friends' influence on adolescent marijuana use.},
+author = {Tucker, Joan S and de la Haye, Kayla and Kennedy, David P and Green, Harold D and Pollard, Michael S},
+doi = {10.1016/j.jadohealth.2013.07.025},
+file = {:home/george/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Tucker et al. - 2014 - Peer influence on marijuana use in different types of friendships.pdf:pdf},
+issn = {1879-1972},
+journal = {The Journal of adolescent health : official publication of the Society for Adolescent Medicine},
+keywords = {Adolescent,Adolescent Behavior,Adolescent Behavior: psychology,Female,Friends,Friends: psychology,Humans,Interpersonal Relations,Male,Marijuana Smoking,Marijuana Smoking: epidemiology,Marijuana Smoking: psychology,Models, Psychological,National Longitudinal Study of Adolescent Health,Peer Group,Social Networking},
+mendeley-groups = {Cana},
+month = {jan},
+number = {1},
+pages = {67--73},
+pmid = {24054813},
+title = {{Peer influence on marijuana use in different types of friendships.}},
+url = {http://www.sciencedirect.com/science/article/pii/S1054139X13004072},
+volume = {54},
+year = {2014}
 }
